--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
