--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     })
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'ru.noties:markwon:1.0.3'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
